Bug 1373279 - Avoid checking for OpenVR runtime until hitting WebVR content r=rbarker

MozReview-Commit-ID: 9nUZ44uZEjE